@@ -115,17 +115,6 @@ SET(WTF_HEADERS
     dtoa/strtod.h
     dtoa/utils.h
 
-    dtoa/bignum-dtoa.h
-    dtoa/bignum.h
-    dtoa/cached-powers.h
-    dtoa/diy-fp.h
-    dtoa/double-conversion.h
-    dtoa/double.h
-    dtoa/fast-dtoa.h
-    dtoa/fixed-dtoa.h
-    dtoa/strtod.h
-    dtoa/utils.h
-
     text/AtomicString.h
     text/AtomicStringImpl.h
     text/CString.h
@@ -168,15 +157,6 @@ SET(WTF_SOURCES
     TypeTraits.cpp
     WTFThreadData.cpp
     dtoa.cpp
-
-    dtoa/bignum-dtoa.cc
-    dtoa/bignum.cc
-    dtoa/cached-powers.cc
-    dtoa/diy-fp.cc
-    dtoa/double-conversion.cc
-    dtoa/fast-dtoa.cc
-    dtoa/fixed-dtoa.cc
-    dtoa/strtod.cc
 
     dtoa/bignum-dtoa.cc
     dtoa/bignum.cc
