@@ -1,3 +1,12 @@
+2011-11-18  Patrick Gansterer  <paroga@webkit.org>
+
+        [CMake] Remove duplicate dtoa files from CMakeLists.txt
+        https://bugs.webkit.org/show_bug.cgi?id=72711
+
+        Reviewed by Brent Fulgham.
+
+        * wtf/CMakeLists.txt:
+
 2011-11-17  Michael Saboff  <msaboff@apple.com>
 
         [Qt] REGRESSION(r100510): Enable 8 Bit Strings in JavaScriptCore
